fixed webpack again and served react

--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -3,7 +3,7 @@
     font-family: 'Ubuntu Light', 'Century Gothic', sans-serif;
     margin: 0;
     padding: 0;
-    color: #9d97ee;
+    color: #2d22d0;
     background-color: #FFF;
 }
 
