--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -6,7 +6,10 @@ body {
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    background: linear-gradient(#394c6e, #111eca)
+    /* background: linear-gradient(#394c6e, #272b67, #111eca) */
+    background: linear-gradient(217deg, rgba(255,0,0,.8), rgba(255,0,0,0) 70.71%),
+            linear-gradient(127deg, rgba(0,255,0,.8), rgba(0,255,0,0) 70.71%),
+            linear-gradient(336deg, rgba(0,0,255,.8), rgba(0,0,255,0) 70.71%);
 }
 
 .homepage h1 {
@@ -34,7 +37,7 @@ body {
     width: 100%;
     padding: 10px 0;
     font-size: 16px;
-    color: #fff;
+    color: #0c0e85;
     margin-bottom: 30px;
     border: none;
     border-bottom: 1px solid #fff;
@@ -45,8 +48,8 @@ body {
 .login_form {
     position: relative;
     display: inline-block;
-    padding: 10px 20px;
-    color:#ebecf5;
+    padding: 40px 20px;
+    color:#1d2fd6;
     font-size: 16px;
     text-decoration: none;
     text-transform: uppercase;
@@ -54,6 +57,29 @@ body {
     transition: .5s;
     margin-top: 40px;
     letter-spacing: 4px;
+}
+
+.login_btn {
+    cursor: pointer;
+    outline: 0;
+    color: #fff;
+    background-color: #0d6efd;
+    border-color: #0d6efd;
+    display: inline-block;
+    font-weight: 400;
+    line-height: 1.5;
+    text-align: center;
+    border: 1px solid transparent;
+    padding: 6px 12px;
+    font-size: 16px;
+    border-radius: .25rem;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    :hover {
+        color: #fff;
+        background-color: #0b5ed7;
+        border-color: #0a58ca;
+    }
+
 }
 
 .profile {
